snapshots/yumy__diagnostic__test__multiline_2.snap
---
source: src/diagnostic.rs
expression: clean
---
error[E0277]: `Rc<Mutex<i32>>` cannot be sent between threads safely
  @ [just testing]
1 │ ┬   aaaaaaa
2 │ │ ┬ bbbbbbbbbbbbbb
3 │ │ ┼ ccc
  : │ ╰─ hi
4 │ │ ┬ dddddd
5 │ ┼ ┼ eeeeeeeeee
  : ╰─┼─ just testing two multilines
  :   ╰─ hello


